fixed text overflow on layer menu

--- a/css/jevil.css
+++ b/css/jevil.css
@@ -819,7 +819,7 @@ input.chrome-field-input {
 
 .layer-name-content {
     width: auto;
-    max-width: 360px;
+    max-width: 320px;
     }
 
 .chrome-color-range {
